Update: Refreshed Hyprland folder (Theming, monitor setup, keybind paths to inform user to set their own.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,6 @@
             ##Source Files##
 source = $HOME/.config/hypr/keybindings.conf # Keyboard shortcuts
 source = $HOME/.config/hypr/windowrules.conf # Window rules
-source = $HOME/.config/hypr/monitors.conf # Monitor configuration
 source = $HOME/.config/hypr/userprefs.conf # Your hyprland configuration // Edit this file to change your Hyprland configuration
 source = $HOME/.config/hypr/animations/theme.conf # animations configuration
 source = $HOME/.config/hypr/themes/theme.conf # main window theme configuration
@@ -13,10 +12,39 @@ source = $HOME/.config/hypr/windowrules.conf # rules
 
 # // █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # // █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
+#--- MONITOR CONFIGURATION ---
 
-monitor=DP-2,3440x1440@240.085,0x1440,1
-# 180Hz monitor at the top
-monitor=DP-3,2560x1440@180,0x0,1
+#This simple setup automatically detects all connected monitors
+
+#and uses their native resolutions and refresh rates.
+
+#If you need to manually set scaling (e.g., for HiDPI monitors),
+
+#you can use 'monitor=,preferred,auto,2' for 2x scaling.
+
+#monitor=,preferred,auto,1
+
+#Example for manual setup (commented out):
+
+#monitor=eDP-1,1920x1080,0x0,1
+
+#monitor=HDMI-A-1,3840x2160,1920x0,1.5
+
+#xample to apply a special variable to a specific monitor:
+
+#monitor=eDP-1,addreserved,15,15,15,15 # Adds a reserved area (e.g., for a top bar)
+
+#--- AUTOGROUPING WORKSPACES ---
+
+#You would typically define workspace-to-monitor assignment here,
+
+#but we are skipping that for simplicity with auto-detection.
+
+#workspace=1,monitor:eDP-1
+
+#workspace=2,monitor:HDMI-A-1
+
+monitor=,preferred,auto,1
 
 # // █▀ █▀█ █▀▀ █▀▀ █ ▄▀█ █░░
 # // ▄█ █▀▀ ██▄ █▄▄ █ █▀█ █▄▄
