--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
             ##Source Files##
 source = $HOME/.config/hypr/keybindings.conf # Keyboard shortcuts
 source = $HOME/.config/hypr/windowrules.conf # Window rules
-source = $HOME/.config/hypr/userprefs.conf # Your hyprland configuration // Edit this file to change your Hyprland configuration
+source = $HOME/.config/hypr/startup.conf # Your hyprland configuration // Edit this file to change your Hyprland configuration
 source = $HOME/.config/hypr/animations/theme.conf # animations configuration
 source = $HOME/.config/hypr/themes/theme.conf # main window theme configuration
 source = $HOME/.config/hypr/windowrules.conf # rules
