Keybinds for screenshots

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -93,7 +93,10 @@ $d=[$hc|Audio]
 
 
 $d=[$ut|Screen Capture]Z
-bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy #screenshots
+bind = $mainMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m window
+bind = , PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m output
+bind = $shiftMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m region
+bind = $mainMod, A, exec, grim -g "$(slurp)" - | satty --filename - --output-filename ~/Pictures/Screenshots/Screenshot-$(date '+%Y%m%d-%H:%M:%S').png
 
 
 $ws=Workspaces
