--- a/custom/Tokyo/.config/hypr/themes/theme.conf
+++ b/custom/Tokyo/.config/hypr/themes/theme.conf
@@ -16,7 +16,7 @@ general {
     border_size = 4
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(BB9AF7ff) rgba(BB9AF7ff) 45deg
+    col.active_border = rgba(bb9af7ff) rgba(bb9af7ff) 45deg
     col.inactive_border = rgba(414868cc) rgba(414868cc) 45deg
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -31,9 +31,9 @@ general {
 
 
 group {
-    col.border_active = rgba(BB9AF7ff) rgba(BB9AF7ff) 45deg
+    col.border_active = rgba(bb9af7ff) rgba(bb9af7ff) 45deg
     col.border_inactive = rgba(414868cc) rgba(414868cc) 45deg
-    col.border_locked_active = rgba(BB9AF7ff) rgba(BB9AF7ff) 45deg
+    col.border_locked_active = rgba(bb9af7ff) rgba(bb9af7ff) 45deg
     col.border_locked_inactive = rgba(414868cc) rgba(414868cc) 45deg
 }
 
@@ -42,19 +42,19 @@ decoration {
     shadow:enabled = true
 }
  
-blur {
-        enabled = yes
-        size = 1
-        passes = 3
-        new_optimizations = on
-        ignore_opacity = on
-        xray = false
-        special = true
-        dim_special = 0.3
-        active_opacity = 1.00
-        inactive_opacity = 0.95
-        fullscreen_opacity = 1
-}
+#blur {
+#        enabled = yes
+#        size = 1
+#        passes = 3
+#        new_optimizations = on
+#        ignore_opacity = on
+#        xray = false
+#        special = true
+#        dim_special = 0.3
+#        active_opacity = 1.00
+#        inactive_opacity = 0.95
+#        fullscreen_opacity = 1
+#}
 
 
 
