--- a/custom/Catppuccin/.config/hypr/themes/theme.conf
+++ b/custom/Catppuccin/.config/hypr/themes/theme.conf
@@ -17,7 +17,7 @@ general {
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(a3b4ebff) rgba(a3b4ebff) 45deg
-    col.inactive_border = rgba(4c4f69cc) rgba(4c4f69cc) 45deg
+    col.inactive_border = rgba(313244cc) rgba(313244cc) 45deg
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -32,9 +32,9 @@ general {
 
 group {
     col.border_active = rgba(a3b4ebff) rgba(a3b4ebff) 45deg
-    col.border_inactive = rgba(4c4f69cc) rgba(4c4f69cc) 45deg
+    col.border_inactive = rgba(313244cc) rgba(313244cc) 45deg
     col.border_locked_active = rgba(a3b4ebff) rgba(a3b4ebff) 45deg
-    col.border_locked_inactive = rgba(4c4f69cc) rgba(4c4f69cc) 45deg
+    col.border_locked_inactive = rgba(313244cc) rgba(313244cc) 45deg
 }
 
 decoration {
@@ -42,19 +42,19 @@ decoration {
     shadow:enabled = true
 }
  
-blur {
-        enabled = yes
-        size = 1
-        passes = 3
-        new_optimizations = on
-        ignore_opacity = on
-        xray = false
-        special = true
-        dim_special = 0.3
-        active_opacity = 1.00
-        inactive_opacity = 0.95
-        fullscreen_opacity = 1
-}
+#blur {
+#        enabled = yes
+#        size = 1
+#        passes = 3
+#        new_optimizations = on
+#        ignore_opacity = on
+#        xray = false
+#        special = true
+#        dim_special = 0.3
+#        active_opacity = 1.00
+#        inactive_opacity = 0.95
+#        fullscreen_opacity = 1
+#}
 
 
 
