--- a/custom/Nord/.config/hypr/themes/theme.conf
+++ b/custom/Nord/.config/hypr/themes/theme.conf
@@ -42,19 +42,19 @@ decoration {
     shadow:enabled = true
 }
  
-blur {
-        enabled = yes
-        size = 1
-        passes = 3
-        new_optimizations = on
-        ignore_opacity = on
-        xray = false
-        special = true
-        dim_special = 0.3
-        active_opacity = 1.00
-        inactive_opacity = 0.95
-        fullscreen_opacity = 1
-}
+#blur {
+#        enabled = yes
+#        size = 1
+#        passes = 3
+#        new_optimizations = on
+#        ignore_opacity = on
+#        xray = false
+#        special = true
+#        dim_special = 0.3
+#        active_opacity = 1.00
+#        inactive_opacity = 0.95
+#        fullscreen_opacity = 1
+#}
 
 
 
