--- a/custom/Nightfox Red/.config/hypr/themes/theme.conf
+++ b/custom/Nightfox Red/.config/hypr/themes/theme.conf
@@ -40,22 +40,21 @@ group {
 decoration {
     rounding = 15
     shadow:enabled = true
-}
- 
-#blur {
-#        enabled = yes
-#        size = 1
-#        passes = 3
-#        new_optimizations = on
-#        ignore_opacity = on
-#        xray = false
-#        special = true
-#        dim_special = 0.3
-#        active_opacity = 1.00
-#        inactive_opacity = 0.95
-#        fullscreen_opacity = 1
-#}
+    active_opacity = 1.0
+    inactive_opacity = 0.90
+    fullscreen_opacity = 1.0
 
+  
+    blur {
+        enabled = yes
+        size = 1
+        passes = 3
+        new_optimizations = on
+        ignore_opacity = on
+        xray = false
+        special = true
+    }
+}
 
 
 
