--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -1,113 +1,90 @@
-# █░█░█ █ █▄░█ █▀▄ █▀█ █░█░█   █▀█ █░█ █░░ █▀▀ █▀
-# ▀▄▀▄▀ █ █░▀█ █▄▀ █▄█ ▀▄▀▄▀   █▀▄ █▄█ █▄▄ ██▄ ▄█
-
-# See https://wiki.hyprland.org/Configuring/Window-Rules/
 
 
-# idleinhibit rules
-windowrule = idleinhibit fullscreen, class:^(.*celluloid.*)$|^(.*mpv.*)$|^(.*vlc.*)$
-windowrule = idleinhibit fullscreen, class:^(.*[Ss]potify.*)$
-windowrule = idleinhibit fullscreen, class:^(.*LibreWolf.*)$|^(.*floorp.*)$|^(.*brave-browser.*)$|^(.*firefox.*)$|^(.*chromium.*)$|^(.*zen.*)$|^(.*vivaldi.*)$
+# Floating rules
+windowrule = match:class ^org\.pulseaudio\.pavucontrol$, float true
+windowrule = match:class ^de\.haeckerfelix\.Shortwave$, float true
+windowrule = match:class ^com\.github\.iwalton3\.jellyfin-media-player$, float true
+
+# Idle inhibit rules
+windowrule = match:class ^(.*celluloid.*|.*mpv.*|.*vlc.*)$, idle_inhibit fullscreen
+windowrule = match:class ^.*[Ss]potify.*$, idle_inhibit fullscreen
+windowrule = match:class ^(.*LibreWolf.*|.*floorp.*|.*brave-browser.*|.*firefox.*|.*chromium.*|.*zen.*|.*vivaldi.*)$, idle_inhibit fullscreen
 
 # Picture-in-Picture
-windowrule = tag +picture-in-picture, title:^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
-windowrule = float, tag:picture-in-picture
-windowrule = keepaspectratio, tag:picture-in-picture
-windowrule = move 73% 72%, tag:picture-in-picture
-windowrule = size 25%, tag:picture-in-picture
-windowrule = float, tag:picture-in-picture
-windowrule = pin, tag:picture-in-picture
+windowrule = match:title ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture).*$, tag picture-in-picture
+windowrule = match:tag picture-in-picture, float keepaspectratio pin move "73% 72%" size "25%"
 
-# --- OPACITY RULES (ALL SET TO 1.00 - FULLY OPAQUE) ---
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(firefox)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(brave-browser)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(code-oss)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^([Cc]ode)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(code-url-handler)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(code-insiders-url-handler)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(kitty)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(org.kde.dolphin)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(org.kde.ark)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(nwg-look)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(qt5ct)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(qt6ct)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(kvantummanager)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(org.pulseaudio.pavucontrol)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(blueman-manager)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(nm-applet)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(nm-connection-editor)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(org.kde.polkit-kde-authentication-agent-1)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(polkit-gnome-authentication-agent-1)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(org.freedesktop.impl.portal.desktop.gtk)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^([Ss]team)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^(steamwebhelper)$
-windowrule = opacity 1.00 $& 1.00 $& 1,class:^([Ss]potify)$
-windowrule = opacity 1.00 $& 1.00 $& 1,initialTitle:^(Spotify Free)$
-windowrule = opacity 1.00 $& 1.00 $& 1,initialTitle:^(Spotify Premium)$
+# Opacity rules
+windowrule = match:class ^firefox$, opacity 1.00
+windowrule = match:class ^brave-browser$, opacity 1.00
+windowrule = match:class ^code-oss$, opacity 1.00
+windowrule = match:class ^[Cc]ode$, opacity 1.00
+windowrule = match:class ^code-url-handler$, opacity 1.00
+windowrule = match:class ^code-insiders-url-handler$, opacity 1.00
+windowrule = match:class ^kitty$, opacity 1.00
+windowrule = match:class ^org\.kde\.dolphin$, opacity 1.00
+windowrule = match:class ^org\.kde\.ark$, opacity 1.00
+windowrule = match:class ^nwg-look$, opacity 1.00
+windowrule = match:class ^qt5ct$, opacity 1.00
+windowrule = match:class ^qt6ct$, opacity 1.00
+windowrule = match:class ^kvantummanager$, opacity 1.00
+windowrule = match:class ^org\.pulseaudio\.pavucontrol$, opacity 1.00
+windowrule = match:class ^blueman-manager$, opacity 1.00
+windowrule = match:class ^nm-applet$, opacity 1.00
+windowrule = match:class ^nm-connection-editor$, opacity 1.00
+windowrule = match:class ^org\.kde\.polkit-kde-authentication-agent-1$, opacity 1.00
+windowrule = match:class ^polkit-gnome-authentication-agent-1$, opacity 1.00
+windowrule = match:class ^org\.freedesktop\.impl\.portal\.desktop\.gtk$, opacity 1.00
+windowrule = match:class ^org\.freedesktop\.impl\.portal\.desktop\.hyprland$, opacity 1.00
+windowrule = match:class ^[Ss]team$, opacity 1.00
+windowrule = match:class ^steamwebhelper$, opacity 1.00
+windowrule = match:class ^[Ss]potify$, opacity 1.00
+windowrule = match:initial_title ^Spotify Free$, opacity 1.00
+windowrule = match:initial_title ^Spotify Premium$, opacity 1.00
 
-windowrule = opacity 1.00 1.00,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-windowrule = opacity 1.00 1.00,class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
-windowrule = opacity 1.00 1.00,class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
-windowrule = opacity 1.00 1.00,class:^(com.obsproject.Studio)$ # Obs-Qt
-windowrule = opacity 1.00 1.00,class:^(gnome-boxes)$ # Boxes-Gtk
-windowrule = opacity 1.00 1.00,class:^(vesktop)$ # Vesktop
-windowrule = opacity 1.00 1.00,class:^(discord)$ # Discord-Electron
-windowrule = opacity 1.00 1.00,class:^(WebCord)$ # WebCord-Electron
-windowrule = opacity 1.00 1.00,class:^(ArmCord)$ # ArmCord-Electron
-windowrule = opacity 1.00 1.00,class:^(app.drey.Warp)$ # Warp-Gtk
-windowrule = opacity 1.00 1.00,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-windowrule = opacity 1.00 1.00,class:^(yad)$ # Protontricks-Gtk
-windowrule = opacity 1.00 1.00,class:^(Signal)$ # Signal-Gtk
-windowrule = opacity 1.00 1.00,class:^(io.github.alainm23.planify)$ # planify-Gtk
-windowrule = opacity 1.00 1.00,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
-windowrule = opacity 1.00 1.00,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gtk
-windowrule = opacity 1.00 1.00,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
-windowrule = opacity 1.00 1.00,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
-windowrule = opacity 1.00 1.00,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
+windowrule = match:class ^com\.github\.rafostar\.Clapper$, opacity 1.00
+windowrule = match:class ^com\.github\.tchx84\.Flatseal$, opacity 1.00
+windowrule = match:class ^hu\.kramo\.Cartridges$, opacity 1.00
+windowrule = match:class ^com\.obsproject\.Studio$, opacity 1.00
+windowrule = match:class ^gnome-boxes$, opacity 1.00
+windowrule = match:class ^vesktop$, opacity 1.00
+windowrule = match:class ^discord$, opacity 1.00
+windowrule = match:class ^WebCord$, opacity 1.00
+windowrule = match:class ^ArmCord$, opacity 1.00
+windowrule = match:class ^app\.drey\.Warp$, opacity 1.00
+windowrule = match:class ^net\.davidotek\.pupgui2$, opacity 1.00
+windowrule = match:class ^yad$, opacity 1.00
+windowrule = match:class ^Signal$, opacity 1.00
+windowrule = match:class ^io\.github\.alainm23\.planify$, opacity 1.00
+windowrule = match:class ^io\.gitlab\.theevilskeleton\.Upscaler$, opacity 1.00
+windowrule = match:class ^com\.github\.unrud\.VideoDownloader$, opacity 1.00
+windowrule = match:class ^io\.gitlab\.adhami3310\.Impression$, opacity 1.00
+windowrule = match:class ^io\.missioncenter\.MissionCenter$, opacity 1.00
+windowrule = match:class ^io\.github\.flattool\.Warehouse$, opacity 1.00
 
-windowrule = float,class:^(Signal)$ # Signal-Gtk
-windowrule = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
-windowrule = float,class:^(app.drey.Warp)$ # Warp-Gtk
-windowrule = float,class:^(net.davidotek.pupgui2)$ # ProtonUp-Qt
-windowrule = float,class:^(yad)$ # Protontricks-Gtk
-windowrule = float,class:^(eog)$ # Imageviewer-Gtk
-windowrule = float,class:^(io.github.alainm23.planify)$ # planify-Gtk
-windowrule = float,class:^(io.gitlab.theevilskeleton.Upscaler)$ # Upscaler-Gtk
-windowrule = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloader-Gkk
-windowrule = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
-windowrule = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
+# Floating utilities
+windowrule = match:class ^Signal$, float true
+windowrule = match:class ^com\.github\.rafostar\.Clapper$, float true
+windowrule = match:class ^app\.drey\.Warp$, float true
+windowrule = match:class ^net\.davidotek\.pupgui2$, float true
+windowrule = match:class ^yad$, float true
+windowrule = match:class ^eog$, float true
+windowrule = match:class ^io\.github\.alainm23\.planify$, float true
+windowrule = match:class ^io\.gitlab\.theevilskeleton\.Upscaler$, float true
+windowrule = match:class ^com\.github\.unrud\.VideoDownloader$, float true
+windowrule = match:class ^io\.gitlab\.adhami3310\.Impression$, float true
+windowrule = match:class ^io\.missioncenter\.MissionCenter$, float true
 
-# workaround for jetbrains IDEs dropdowns/popups cause flickering
-windowrule = noinitialfocus,class:^(.*jetbrains.*)$,title:^(win[0-9]+)$
+# JetBrains popup fix
+windowrule = match:class ^.*jetbrains.*$, match:title ^win[0-9]+$, no_initial_focus on
 
-# █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
-# █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
+# YAD cheat sheet
+windowrule = match:class ^yad$, center on
+windowrule = match:class ^yad$, size "1200 900"
 
-# All blur rules removed to prevent blur on floating layers.
-# layerrule = blur,rofi
-layerrule = ignorezero,rofi
-# layerrule = blur,notifications
-layerrule = ignorezero,notifications
-#layerrule = blur,swaync-notification-window
-layerrule = ignorezero,swaync-notification-window
-#layerrule = blur,swaync-control-center
-layerrule = ignorezero,swaync-control-center
-#layerrule = blur,logout_dialog
+# Windscribe
+windowrule = match:class ^Windscribe$, float noborder noshadow noanim noblur
 
-# --- YAD KeyHints Cheat Sheet Custom Size/Position ---
-# NOTE: The size and position rules below were previously causing errors due to redundant definitions.
-# We keep the float rule, and explicitly add size and center rules for the yad cheat sheet.
-# The `float` rule already exists further up in the configuration, so we only need size/center.
-# windowrule = float, class:^(yad)$
-# windowrule = center, class:^(yad)$
-# windowrule = size 1200 900, class:^(yad)$
-
-# These new explicit rules override any previous conflicting rules for the Yad Cheat Sheet
-windowrule = center, class:^(yad)$
-windowrule = size 1200 900, class:^(yad)$
-
-
-
-
+# Gamescope
+windowrule = match:class ^gamescope$, opacity 1.0 rounding 0 noanim noshadow noblur fullscreen
 
