Update keybindings for application launcher and settings

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -28,19 +28,16 @@ bindd = $mainMod, C, $d text editor , exec, $EDITOR #VS Code
 bindd = $mainMod, B, $d web browser , exec, $BROWSER #Browser
 #bindd = Control Shift, Escape, exec, missioncenter #Mission Center
 
-$d=[$l|Rofi menus]
-bind = $mainMod, D, exec, pkill -x rofi || rofi -show drun # App Menu
-bind = $mainMod SHIFT, E, exec, pkill -x rofi || rofi -show filebrowser
-bind = $mainMod, H, exec, /home/tonekneeo/.config/hypr/Scripts/show-keyhints.sh #Keyhints Menu
-
+bind = $mainMod, D, exec, qs -c noctalia-shell ipc call launcher toggle
+bind = $mainMod, L, exec, qs -c noctalia-shell ipc call lockScreen lock #Lockscreen
+bind = $mainMod, T, exec, qs -c noctalia-shell ipc call settings toggle
+bind = $mainMod, O, exec, qs -c noctalia-shell ipc call controlCenter toggle
 
 $wm=Window Management
 $d=[$wm]
 bind = $mainMod, Q, killactive, #Close Windows
 bindd = $mainMod, W, $d Toggle floating, togglefloating #Toggle Floating
 bindd = $mainMod, F, $d toggle fullscreen, fullscreen #Toggle Fullscreen
-#bindd = $mainMod, L, $d lock screen, exec, lockscreen.sh 
-bind = $mainMod, L, exec, qs -c noctalia-shell ipc call lockScreen lock #Lockscreen
 bind = $mainMod, tab, workspace, m+1 #Workspace Up
 bind = $mainMod SHIFT, tab, workspace, m-1 #Workspace Down
 
