--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,7 +1,7 @@
 
      ##//App Startup\\##
 
-exec-once = qs -c noctalia-shell  
+#exec-once = qs -c noctalia-shell  
 exec-once = hyprctl reload &   
 exec-once = hypridle &
 
