--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -34,7 +34,7 @@ exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESK
 
     ##//Only neccasary in certain environments\\##
 
-#env = QT_QPA_PLATFORMTHEME,qt6ct
+env = QT_QPA_PLATFORMTHEME,qt6ct
 #env = QT_STYLE_OVERRIDE,kvantum
 #env = QT_QPA_PLATFORM,wayland
 #env = GDK_BACKEND,wayland
