--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,51 +1,36 @@
-
-     ##//App Startup\\##
+## STARTUP
 
 #exec-once = qs -c noctalia-shell  
-exec-once = hyprctl reload &   
-exec-once = hypridle &
+exec-once = hyprctl reload &
 
+## ENVIRONMENT VARIABLES
 
-     ##//Hyprland core\\##
-    
+env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
+## SYSTEMWIDE CURSOR (Change to your theme)
 
-        ##//Polkit\\##
-
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1
-
-       ##//Secrets\\##
-       
-exec-once = gnome-keyring-daemon --start --components=secrets
-
-       ##//Portals\\##
-       
-exec-once = /usr/lib/xdg-desktop-portal-hyprland
-exec-once = /usr/lib/xdg-desktop-portal
-
-    ##//Environment sync\\##
-    
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-    ##//Only neccasary in certain environments\\##
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE,24
 
 env = QT_QPA_PLATFORMTHEME,qt6ct
-#env = QT_STYLE_OVERRIDE,kvantum
-#env = QT_QPA_PLATFORM,wayland
-#env = GDK_BACKEND,wayland
+env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 
-       ##//Electron\\##
-       
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 
+## EXEC-ONCE SERVICES
 
+# Polkit (required)
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1
 
+# Idle daemon
+exec-once = hypridle &
+
+# GNOME Keyring (optional i.e Browser Passwords)
+exec-once = gnome-keyring-daemon --start --components=secrets
 
 
 
