Added window rule

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -27,6 +27,7 @@ windowrule = match:class ^org\.kde\.ark$, opacity 1.00
 windowrule = match:class ^nwg-look$, opacity 1.00
 windowrule = match:class ^qt5ct$, opacity 1.00
 windowrule = match:class ^qt6ct$, opacity 1.00
+windowrule = match:class ^extsource$, opacity 1.00
 windowrule = match:class ^kvantummanager$, opacity 1.00
 windowrule = match:class ^org\.pulseaudio\.pavucontrol$, opacity 1.00
 windowrule = match:class ^blueman-manager$, opacity 1.00
