--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -1,133 +1,90 @@
-
-          ##//Keybinds\\##
-
-# see https://wiki.hyprland.org/configuring/keywords/ for more
-# example binds, see https://wiki.hyprland.org/configuring/binds/ for more
+##//Keybinds\\##
 
 $scrPath = $HOME/.config/hypr/Scripts
+$mainMod = SUPER
 
-#*  Variables 
-# Default if commented out
-$mainMod = SUPER # super / meta / windows key
-
-   ##//Assign apps\\##
-   
+# Applications
 $TERMINAL = kitty
 $EDITOR = code
 $EXPLORER = thunar
-$BROWSER = #set browser of choice once installed i.e, brave, firefox, vivaldi 
+$BROWSER =
 
+bind = SUPER, RETURN, exec, $TERMINAL #"Terminal"
+bind = SUPER, E, exec, $EXPLORER #"File Manager"
+bind = SUPER, C, exec, $EDITOR #"VS Code"
+bind = SUPER, B, exec, $BROWSER #"Browser"
 
+bind = SUPER, D, exec, qs -c noctalia-shell ipc call launcher toggle #"Launcher"
+bind = SUPER, L, exec, qs -c noctalia-shell ipc call lockScreen lock #"Lockscreen"
+bind = SUPER, T, exec, qs -c noctalia-shell ipc call settings toggle #"Settings"
+bind = SUPER, O, exec, qs -c noctalia-shell ipc call controlCenter toggle #"Control Center"
 
+# Window Management
+bind = SUPER, Q, killactive #"Close Windows"
+bind = SUPER, W, togglefloating #"Toggle Floating"
+bind = SUPER, F, fullscreen #"Toggle Fullscreen"
 
-$l=Launcher
-$d=[$l|Apps]
-bindd = $mainMod, RETURN, $d terminal emulator , exec, $TERMINAL #Terminal
-bindd = $mainMod, E, $d file explorer , exec, $EXPLORER #File Manager
-bindd = $mainMod, C, $d text editor , exec, $EDITOR #VS Code
-bindd = $mainMod, B, $d web browser , exec, $BROWSER #Browser
-#bindd = Control Shift, Escape, exec, missioncenter #Mission Center
+bind = SUPER, tab, workspace, m+1 #"Workspace Up"
+bind = SUPER SHIFT, tab, workspace, m-1 #"Workspace Down"
 
-bind = $mainMod, D, exec, qs -c noctalia-shell ipc call launcher toggle
-bind = $mainMod, L, exec, qs -c noctalia-shell ipc call lockScreen lock #Lockscreen
-bind = $mainMod, T, exec, qs -c noctalia-shell ipc call settings toggle
-bind = $mainMod, O, exec, qs -c noctalia-shell ipc call controlCenter toggle
+bind = SUPER, Left, movefocus, l #"Focus Left"
+bind = SUPER, Right, movefocus, r #"Focus Right"
+bind = SUPER, Up, movefocus, u #"Focus Up"
+bind = SUPER, Down, movefocus, d #"Focus Down"
+bind = ALT, Tab, cyclenext #"Cycle Focus"
 
-$wm=Window Management
-$d=[$wm]
-bind = $mainMod, Q, killactive, #Close Windows
-bindd = $mainMod, W, $d Toggle floating, togglefloating #Toggle Floating
-bindd = $mainMod, F, $d toggle fullscreen, fullscreen #Toggle Fullscreen
-bind = $mainMod, tab, workspace, m+1 #Workspace Up
-bind = $mainMod SHIFT, tab, workspace, m-1 #Workspace Down
+bind = SUPER Shift, Right, resizeactive, 30 0 #"Resize Right"
+bind = SUPER Shift, Left, resizeactive, -30 0 #"Resize Left"
+bind = SUPER Shift, Up, resizeactive, 0 -30 #"Resize Up"
+bind = SUPER Shift, Down, resizeactive, 0 30 #"Resize Down"
 
-$d=[$wm|Change focus]
-bindd = $mainMod, Left, $d focus left, movefocus, l
-bindd = $mainMod, Right, $d focus right , movefocus, r
-bindd = $mainMod, Up, $d focus up , movefocus, u
-bindd = $mainMod, Down , $d focus down, movefocus, d
-bindd = ALT, Tab,$d Cycle focus, cyclenext
+$moveactivewindow = grep -q "true" <<< $(hyprctl activewindow -j | jq -r .floating) && hyprctl dispatch moveactive
 
-$d=[$wm|Resize Active Window]
-# Resize windows
-bindde = $mainMod Shift, Right, $d resize window right , resizeactive, 30 0
-bindde = $mainMod Shift, Left, $d resize window left, resizeactive, -30 0
-bindde = $mainMod Shift, Up, $d resize window up, resizeactive, 0 -30
-bindde = $mainMod Shift, Down, $d resize  window down, resizeactive, 0 30
+bind = SUPER Shift Control, left, exec, $moveactivewindow -30 0 || hyprctl dispatch movewindow l #"Move Window Left"
+bind = SUPER Shift Control, right, exec, $moveactivewindow 30 0 || hyprctl dispatch movewindow r #"Move Window Right"
+bind = SUPER Shift Control, up, exec, $moveactivewindow 0 -30 || hyprctl dispatch movewindow u #"Move Window Up"
+bind = SUPER Shift Control, down, exec, $moveactivewindow 0 30 || hyprctl dispatch movewindow d #"Move Window Down"
 
-# Move active window around current workspace with mainMod + Shift + Control [←→↑↓]
-$d=[$wm|Move active window across workspace]
-$moveactivewindow=grep -q "true" <<< $(hyprctl activewindow -j | jq -r .floating) && hyprctl dispatch moveactive
-bindde = $mainMod Shift Control, left, Move active window to the left, exec, $moveactivewindow -30 0 || hyprctl dispatch movewindow l
-bindde = $mainMod Shift Control, right, Move active window to the right, exec, $moveactivewindow 30 0 || hyprctl dispatch movewindow r
-bindde = $mainMod Shift Control, up, Move active window up, exec, $moveactivewindow  0 -30 || hyprctl dispatch movewindow u
-bindde = $mainMod Shift Control, down, Move active window down, exec, $moveactivewindow 0 30 || hyprctl dispatch movewindow d
+bindm = SUPER, mouse:272, movewindow #"Move Window (Mouse)"
+bindm = SUPER, mouse:273, resizewindow #"Resize Window (Mouse)"
+bind = SUPER, Z, movewindow #"Move Window (Key)"
+bindm = SUPER, X, resizewindow #"Resize Window (Key)"
 
-# Move/Resize focused window
-$d=[$wm|Move & Resize with mouse]
-binddm = $mainMod, mouse:272, $d hold to move window, movewindow
-binddm = $mainMod, mouse:273, $d hold to resize window, resizewindow
-binddm = $mainMod, Z, $d hold to move window , movewindow
-binddm = $mainMod, X, $d hold to resize window, resizewindow
+# Screen Capture
+bind = SUPER, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m window #"Screenshot-Window"
+bind = ALT, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m output #"Screenshot-Screen"
+bind = $shiftMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m region #"Screenshot-Region"
+bind = SUPER, A, exec, grim -g "$(slurp)" - | satty --filename - --output-filename ~/Pictures/Screenshots/Screenshot-$(date '+%Y%m%d-%H:%M:%S').png #"Screenshot-Region w/ Editor"
 
-$hc=Hardware Controls
-$d=[$hc|Audio]
+# Workspaces
+bind = SUPER, 1, workspace, 1 #"Workspace 1"
+bind = SUPER, 2, workspace, 2 #"Workspace 2"
+bind = SUPER, 3, workspace, 3 #"Workspace 3"
+bind = SUPER, 4, workspace, 4 #"Workspace 4"
+bind = SUPER, 5, workspace, 5 #"Workspace 5"
+bind = SUPER, 6, workspace, 6 #"Workspace 6"
+bind = SUPER, 7, workspace, 7 #"Workspace 7"
+bind = SUPER, 8, workspace, 8 #"Workspace 8"
+bind = SUPER, 9, workspace, 9 #"Workspace 9"
+bind = SUPER, 0, workspace, 10 #"Workspace 10"
 
+bind = SUPER Control, Right, workspace, r+1 #"Next Workspace"
+bind = SUPER Control, Left, workspace, r-1 #"Previous Workspace"
+bind = SUPER Control, Down, workspace, empty #"Nearest Empty Workspace"
 
-$d=[$ut|Screen Capture]Z
-#bind = $mainMod, S, exec, grim -g "$(slurp)" - | wl-copy #screenshots
+bind = SUPER, mouse_down, workspace, e+1 #"Scroll Workspace Forward"
+bind = SUPER, mouse_up, workspace, e-1 #"Scroll Workspace Backward"
 
-bind = $mainMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m window #Screenshot-Window
+bind = SUPER Shift, 1, movetoworkspace, 1 #"Move to Workspace 1"
+bind = SUPER Shift, 2, movetoworkspace, 2 #"Move to Workspace 2"
+bind = SUPER Shift, 3, movetoworkspace, 3 #"Move to Workspace 3"
+bind = SUPER Shift, 4, movetoworkspace, 4 #"Move to Workspace 4"
+bind = SUPER Shift, 5, movetoworkspace, 5 #"Move to Workspace 5"
+bind = SUPER Shift, 6, movetoworkspace, 6 #"Move to Workspace 6"
+bind = SUPER Shift, 7, movetoworkspace, 7 #"Move to Workspace 7"
+bind = SUPER Shift, 8, movetoworkspace, 8 #"Move to Workspace 8"
+bind = SUPER Shift, 9, movetoworkspace, 9 #"Move to Workspace 9"
+bind = SUPER Shift, 0, movetoworkspace, 10 #"Move to Workspace 10"
 
-bind = $ALT, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m output #Screenshot-Screen
-
-bind = $shiftMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m region # Screenshot-Region
-
-bind = $mainMod, A, exec, grim -g "$(slurp)" - | satty --filename - --output-filename ~/Pictures/Screenshots/Screenshot-$(date '+%Y%m%d-%H:%M:%S').png #Screenshot-Region w/ Editor
-
-$ws=Workspaces
-$d=[$ws|Navigation]
-bindd = $mainMod, 1, $d navigate to workspace 1 , workspace, 1
-bindd = $mainMod, 2, $d navigate to workspace 2 , workspace, 2
-bindd = $mainMod, 3, $d navigate to workspace 3 , workspace, 3
-bindd = $mainMod, 4, $d navigate to workspace 4 , workspace, 4
-bindd = $mainMod, 5, $d navigate to workspace 5 , workspace, 5
-bindd = $mainMod, 6, $d navigate to workspace 6 , workspace, 6
-bindd = $mainMod, 7, $d navigate to workspace 7 , workspace, 7
-bindd = $mainMod, 8, $d navigate to workspace 8 , workspace, 8
-bindd = $mainMod, 9, $d navigate to workspace 9 , workspace, 9
-bindd = $mainMod, 0, $d navigate to workspace 10 , workspace, 10
-
-$d=[$ws|Navigation|Relative workspace]
-bindd = $mainMod Control, Right, $d change active workspace forwards  , workspace, r+1
-bindd = $mainMod Control, Left, $d change active workspace backwards , workspace, r-1
-
-$d=[$ws|Navigation]
-bindd = $mainMod Control, Down, $d navigate to the nearest empty workspace , workspace, empty
-
-# Move focused window to a workspace
-$d=[$ws|Move window to workspace]
-bindd = $mainMod Shift, 1, $d move to workspace 1 , movetoworkspace, 1
-bindd = $mainMod Shift, 2, $d move to workspace 2 , movetoworkspace, 2
-bindd = $mainMod Shift, 3, $d move to workspace 3 , movetoworkspace, 3
-bindd = $mainMod Shift, 4, $d move to workspace 4 , movetoworkspace, 4
-bindd = $mainMod Shift, 5, $d move to workspace 5 , movetoworkspace, 5
-bindd = $mainMod Shift, 6, $d move to workspace 6 , movetoworkspace, 6
-bindd = $mainMod Shift, 7, $d move to workspace 7 , movetoworkspace, 7
-bindd = $mainMod Shift, 8, $d move to workspace 8 , movetoworkspace, 8
-bindd = $mainMod Shift, 9, $d move to workspace 9 , movetoworkspace, 9
-bindd = $mainMod Shift, 0, $d move to workspace 10 , movetoworkspace, 10
-
-# Move focused window to a relative workspace
-$d=[$ws]
-bindd = $mainMod Control+Alt, Right, $d move window to next relative workspace , movetoworkspace, r+1
-bindd = $mainMod Control+Alt, Left, $d move window to previous relative workspace , movetoworkspace, r-1
-
-
-# Scroll through existing workspaces
-$d=[$ws|Navigation]
-bindd = $mainMod, mouse_down, $d next workspace, workspace, e+1
-bindd = $mainMod, mouse_up, $d previous workspace, workspace, e-1
-
-
-
+bind = SUPER Control+Alt, Right, movetoworkspace, r+1 #"Move to Next Relative Workspace"
+bind = SUPER Control+Alt, Left, movetoworkspace, r-1 #"Move to Previous Relative Workspace"
