--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -3,7 +3,7 @@
 $scrPath = $HOME/.config/hypr/Scripts
 $mainMod = SUPER
 
-# Applications
+# 1. Applications
 $TERMINAL = kitty
 $EDITOR = code
 $EXPLORER = thunar
@@ -19,7 +19,7 @@ bind = SUPER, L, exec, qs -c noctalia-shell ipc call lockScreen lock #"Lockscree
 bind = SUPER, T, exec, qs -c noctalia-shell ipc call settings toggle #"Settings"
 bind = SUPER, O, exec, qs -c noctalia-shell ipc call controlCenter toggle #"Control Center"
 
-# Window Management
+# 2. Window Management
 bind = SUPER, Q, killactive #"Close Windows"
 bind = SUPER, W, togglefloating #"Toggle Floating"
 bind = SUPER, F, fullscreen #"Toggle Fullscreen"
@@ -50,13 +50,13 @@ bindm = SUPER, mouse:273, resizewindow #"Resize Window (Mouse)"
 bind = SUPER, Z, movewindow #"Move Window (Key)"
 bindm = SUPER, X, resizewindow #"Resize Window (Key)"
 
-# Screen Capture
+# 3. Screen Capture
 bind = SUPER, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m window #"Screenshot-Window"
 bind = ALT, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m output #"Screenshot-Screen"
 bind = $shiftMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m region #"Screenshot-Region"
 bind = SUPER, A, exec, grim -g "$(slurp)" - | satty --filename - --output-filename ~/Pictures/Screenshots/Screenshot-$(date '+%Y%m%d-%H:%M:%S').png #"Screenshot-Region w/ Editor"
 
-# Workspaces
+# 4. Workspaces
 bind = SUPER, 1, workspace, 1 #"Workspace 1"
 bind = SUPER, 2, workspace, 2 #"Workspace 2"
 bind = SUPER, 3, workspace, 3 #"Workspace 3"
