Update keybinds section numbers in configuration

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -14,12 +14,14 @@ bind = SUPER, E, exec, $EXPLORER #"File Manager"
 bind = SUPER, C, exec, $EDITOR #"VS Code"
 bind = SUPER, B, exec, $BROWSER #"Browser"
 
+# 2. Noctalia
 bind = SUPER, D, exec, qs -c noctalia-shell ipc call launcher toggle #"Launcher"
 bind = SUPER, L, exec, qs -c noctalia-shell ipc call lockScreen lock #"Lockscreen"
 bind = SUPER, T, exec, qs -c noctalia-shell ipc call settings toggle #"Settings"
 bind = SUPER, O, exec, qs -c noctalia-shell ipc call controlCenter toggle #"Control Center"
+bind = SUPER, H, exec, qs -c noctalia-shell ipc call plugin:keybind-cheatsheet toggle #"Keyhints Cheatsheet"
 
-# 2. Window Management
+# 3. Window Management
 bind = SUPER, Q, killactive #"Close Windows"
 bind = SUPER, W, togglefloating #"Toggle Floating"
 bind = SUPER, F, fullscreen #"Toggle Fullscreen"
@@ -50,13 +52,13 @@ bindm = SUPER, mouse:273, resizewindow #"Resize Window (Mouse)"
 bind = SUPER, Z, movewindow #"Move Window (Key)"
 bindm = SUPER, X, resizewindow #"Resize Window (Key)"
 
-# 3. Screen Capture
+# 4. Screen Capture
 bind = SUPER, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m window #"Screenshot-Window"
 bind = ALT, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m output #"Screenshot-Screen"
 bind = $shiftMod, PRINT, exec, HYPRSHOT_DIR=~/Pictures/Screenshots hyprshot -m region #"Screenshot-Region"
 bind = SUPER, A, exec, grim -g "$(slurp)" - | satty --filename - --output-filename ~/Pictures/Screenshots/Screenshot-$(date '+%Y%m%d-%H:%M:%S').png #"Screenshot-Region w/ Editor"
 
-# 4. Workspaces
+# 5. Workspaces
 bind = SUPER, 1, workspace, 1 #"Workspace 1"
 bind = SUPER, 2, workspace, 2 #"Workspace 2"
 bind = SUPER, 3, workspace, 3 #"Workspace 3"
