--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,38 +1,30 @@
-
-            ##//Source Files\\##
-
-source = $HOME/.config/hypr/monitors.conf             
+# Source Files
+source = $HOME/.config/hypr/monitors.conf
 source = $HOME/.config/hypr/startup.conf
-source = $HOME/.config/hypr/inputs.conf             
-source = $HOME/.config/hypr/keybinds.conf 
-source = $HOME/.config/hypr/windowrules.conf 
-source = $HOME/.config/hypr/animations/theme.conf 
-source = $HOME/.config/hypr/themes/theme.conf 
+source = $HOME/.config/hypr/inputs.conf
+source = $HOME/.config/hypr/keybinds.conf
+source = $HOME/.config/hypr/windowrules.conf
+source = $HOME/.config/hypr/animations/theme.conf
+source = $HOME/.config/hypr/themes/theme.conf
 
 
-
-      ##//Layouts\\##
-
+# Layouts
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/
-
 dwindle {
     pseudotile = yes
     preserve_split = yes
 }
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/
-
 master {
     new_status = master
 }
 
 
-        ##//Misc\\##
-
+# Misc
 # See https://wiki.hyprland.org/Configuring/Variables/#misc
-
 misc {
-    vrr = 0    # 0=OFF 1=ON  2=FULLSCREEN ONLY
+    vrr = 0                      # 0=OFF 1=ON 2=FULLSCREEN ONLY
     disable_hyprland_logo = true
     disable_splash_rendering = true
     force_default_wallpaper = 0
@@ -44,9 +36,8 @@ xwayland {
     force_zero_scaling = true
 }
 
-
 general {
-    snap { # snapping for floating windows
+    snap {                       # snapping for floating windows
         enabled = true
     }
 }
