Modify keybinds configuration
Updated keybinds configuration and added placeholder for browser.

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -1,4 +1,4 @@
-##//Keybinds\\##
+#Keybinds
 
 $scrPath = $HOME/.config/hypr/Scripts
 $mainMod = SUPER
@@ -7,7 +7,7 @@ $mainMod = SUPER
 $TERMINAL = kitty
 $EDITOR = code
 $EXPLORER = thunar
-$BROWSER =
+$BROWSER = (Replace with installed brower)
 
 bind = SUPER, RETURN, exec, $TERMINAL #"Terminal"
 bind = SUPER, E, exec, $EXPLORER #"File Manager"
