--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,21 +1,21 @@
-## STARTUP
+#STARTUP
 
 #exec-once = qs -c noctalia-shell  
 exec-once = hyprctl reload &
 
-## ENVIRONMENT VARIABLES
+#ENVIRONMENT VARIABLES
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
-## SYSTEMWIDE CURSOR (Change to your theme)
+#SYSTEMWIDE CURSOR (Change to your theme)
 
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
-## QT 
+#QT 
 
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
@@ -23,20 +23,20 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_CURSOR_THEME,Bibata-Modern-Classic
 env = QT_CURSOR_SIZE,24
 
-## ELECTRON
+#ELECTRON
 
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 
-## EXEC-ONCE SERVICES
+#EXEC-ONCE SERVICES
 
-# Polkit (required)
+#Polkit (required)
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 || /usr/libexec/polkit-gnome-authentication-agent-1
 
-# Idle daemon
+#Idle daemon
 exec-once = hypridle &
 
-# GNOME Keyring (optional i.e Browser Passwords)
+#GNOME Keyring (optional i.e Browser Passwords)
 exec-once = gnome-keyring-daemon --start --components=secrets
 
 
