Update browser command in keybinds configuration

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -7,7 +7,7 @@ $mainMod = SUPER
 $TERMINAL = kitty
 $EDITOR = code
 $EXPLORER = thunar
-$BROWSER = (Replace with installed brower)
+$BROWSER = ~/.config/hypr/Scripts/browser-launcher.sh
 
 bind = SUPER, RETURN, exec, $TERMINAL #"Terminal"
 bind = SUPER, E, exec, $EXPLORER #"File Manager"
