added keybind for hyprland-keybinds plugin

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -20,6 +20,7 @@ bind = SUPER, L, exec, qs -c noctalia-shell ipc call lockScreen lock #"Lockscree
 bind = SUPER, T, exec, qs -c noctalia-shell ipc call settings toggle #"Settings"
 bind = SUPER, O, exec, qs -c noctalia-shell ipc call controlCenter toggle #"Control Center"
 bind = SUPER, H, exec, qs -c noctalia-shell ipc call plugin:keybind-cheatsheet toggle #"Keyhints Cheatsheet"
+bind = SUPER, K, exec, qs -c noctalia-shell ipc call plugin:hyprland-keybinds toggle #"Keybind Editor"
 
 # 3. Window Management
 bind = SUPER, Q, killactive #"Close Windows"
