Add hardware control keybindings for audio

--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -91,3 +91,10 @@ bind = SUPER Shift, 0, movetoworkspace, 10 #"Move to Workspace 10"
 
 bind = SUPER Control+Alt, Right, movetoworkspace, r+1 #"Move to Next Relative Workspace"
 bind = SUPER Control+Alt, Left, movetoworkspace, r-1 #"Move to Previous Relative Workspace"
+
+# 6. HARDWARE CONTROLS
+bind = , XF86AudioPlay, exec, playerctl play-pause #"Play/Pause"
+bind = , XF86AudioNext, exec, playerctl next #"Next Track"
+bind = , XF86AudioPrev, exec, playerctl previous #"Previous Track"
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 #"Volume Up"
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 #"Volume Down"
